# Snake-Game

./: .gitignore  LICENSE  Makefile  Makefile-failed  README.md
Data/: map_ex.cpp
Data/maps/: map_101
src/: CMakeLists.txt  Grading.cpp  Makefile  PrintTerminal.cpp  PrintTerminal.hpp  PrintTerminal_test.cpp  Snake.cpp  Snake.h  Snake_test.cpp
